--- a/Replica101/index.html
+++ b/Replica101/index.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="side-label right-label">
-                create —— <span class="yellow-text">your story</span>
+               <span class="yellow-text">your story</span>
             </div>
 
             <div class="hero-description">
